# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/location/config.gni")
import("//build/ohos.gni")

config("locator_agent_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$LOCATION_ROOT_DIR/interfaces/inner_api/native/include",
    "$LOCATION_ROOT_DIR/interfaces/inner_api/include",
    "$LOCATION_ROOT_DIR/frameworks/native/locator_agent/include",
  ]
}

ohos_shared_library("locator_agent") {
  public_configs = [ ":locator_agent_config" ]

  sources = [
    "$LOCATION_COMMON_DIR/source/common_hisysevent.cpp",
    "$LOCATION_COMMON_DIR/source/common_utils.cpp",
    "$LOCATION_COMMON_DIR/source/hook_utils.cpp",
    "$LOCATION_COMMON_DIR/source/location.cpp",
    "$LOCATION_COMMON_DIR/source/location_sa_load_manager.cpp",
    "$LOCATION_COMMON_DIR/source/request.cpp",
    "$LOCATION_COMMON_DIR/source/request_config.cpp",
    "$LOCATION_COMMON_DIR/source/satellite_status.cpp",
    "$LOCATION_ROOT_DIR/frameworks/native/locator_agent/source/locator_agent.cpp",
    "$LOCATION_ROOT_DIR/frameworks/native/locator_agent/source/native_location_callback_host.cpp",
    "$LOCATION_ROOT_DIR/frameworks/native/locator_agent/source/native_nmea_callback_host.cpp",
    "$LOCATION_ROOT_DIR/frameworks/native/locator_agent/source/native_sv_callback_host.cpp",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
    "ipc:ipc_single",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]

  defines = []
  if (is_emulator) {
    defines += [ "EMULATOR_ENABLED" ]
  }

  innerapi_tags = [ "platformsdk" ]
  part_name = "location"
  subsystem_name = "location"
}
