# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/location/config.gni")
import("//build/ohos.gni")

config("locator_agent_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$LOCATION_ROOT_DIR/interfaces/inner_api/native/include",
    "$LOCATION_ROOT_DIR/interfaces/inner_api/include",
  ]
}

ohos_shared_library("locator_agent") {
  public_configs = [ ":locator_agent_config" ]

  sources = [
    "$LOCATION_COMMON_DIR/source/location.cpp",
    "$LOCATION_COMMON_DIR/source/location_sa_load_manager.cpp",
    "$LOCATION_COMMON_DIR/source/request_config.cpp",
    "$LOCATION_COMMON_DIR/source/satellite_status.cpp",
    "$LOCATION_ROOT_DIR/interfaces/inner_api/native/source/locator_agent.cpp",
    "$LOCATION_ROOT_DIR/interfaces/inner_api/native/source/native_location_callback_host.cpp",
    "$LOCATION_ROOT_DIR/interfaces/inner_api/native/source/native_nmea_callback_host.cpp",
    "$LOCATION_ROOT_DIR/interfaces/inner_api/native/source/native_sv_callback_host.cpp",
  ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  innerapi_tags = [ "platformsdk" ]
  part_name = "location"
  subsystem_name = "location"
}
